Changed Arrays.asList to List.of method